# app/dtos/employees/dtoemployee_response.go
@@ -1,0 +1,7 @@
+package dtosemployees
+
+type EmployeeResponse struct {
+	ID     string  `json:"id"`
+	Name   string  `json:"name" binding:"required,min=2,max=100"`
+	Salary float32 `json:"salary"`
+}
