# app/models/employees/pgEmployeeModels.go
@@ -1,0 +1,9 @@
+package models
+
+import "github.com/google/uuid"
+
+type Employee struct {
+	ID     uuid.UUID `json:"id"` // UUID for the book ID
+	Name   string    `json:"name"`
+	Salary float32   `json:"price"`
+}
